*Trying* to make the messages and form not overlap (not solved)

--- a/src/App.css
+++ b/src/App.css
@@ -72,7 +72,6 @@ form button {
   background-color: rgb(56, 56, 143);
 }
 
-
 input {
   line-height: 1.5;
   width: 100%;
@@ -109,9 +108,6 @@ button:disabled {
   margin: 0 auto;
 }
 
-
-
-
 ul, li {
   text-align: left;
   list-style: none;
@@ -133,6 +129,20 @@ p {
   align-items: center;
 }
 
+.chat-room {
+  display: grid;
+  grid-template-columns: 1fr;
+}
+
+.chat-room-window {
+  grid-column-start: 1;
+  grid-row-start: 1;
+}
+
+.chat-room-form {
+  grid-column-start: 1;
+  grid-row-start: 2;
+}
 
 .sent {
   flex-direction: row-reverse;
@@ -143,6 +153,7 @@ p {
   background: #0b93f6;
   align-self: flex-end;
 }
+
 .received p {
   background: #e5e5ea;
   color: black;
